--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                             </ul>
                         </div>
                         <div class="copyright">
-                            <p>Copyright © 2020 Material. Developed by HM-Dev Team.</p>
+                            <p>Copyright © 2020 Material. Developed by Hicham Mokaddem.</p>
                         </div>
                     </div>
                 </div>
